feat(sort): add multiply sort